# EE405_FINAL

./: py2cpp.cpp  readme.md  readme_new.md  test  tictactoe.cpp  yolo2py.py
20190288/final_ee405/ee405_final/: memo.txt  test  test.cpp
20190288/final_ee405/ee405_final/data/labels/: validation.cache
20190288/final_ee405/ee405_final/data/labels/training/: 000001.txt  000004.txt  000005.txt  000008.txt  000012.txt  000018.txt  000022.txt  000025.txt  000031.txt  000032.txt  000037.txt  000038.txt  000040.txt  000044.txt  000059.txt  000060.txt  000061.txt  000064.txt  000075.txt  000077.txt  000081.txt  000085.txt  000086.txt  000089.txt  000094.txt  000096.txt
20190288/final_ee405/ee405_final/data/labels/validation/: 000107.txt  000110.txt  000116.txt  000119.txt
20190288/final_ee405/ee405_final/motor_integration/: test.cpp
20190288/final_ee405/ee405_final/motor_integration/include/Common/: DirectTeaching copy.cpp  DirectTeaching copy.hpp  DirectTeaching.cpp  DirectTeaching.hpp  Kinematics.cpp
20190288/final_ee405/ee405_final/motor_integration/include/FileIO/: MatrixFileIO.cpp
20190288/final_ee405/ee405_final/motor_integration/include/GPIO/: gpio_control.cpp  gpio_control.hpp  (+1 more)
20190288/final_ee405/ee405_final/motor_integration/src/: determine.hpp  getche.h  gripper_test.cpp  manipulator_control_week1.cpp  manipulator_control_week2.cpp  save_waypoints.cpp  yolo2py.py
data/labels/training/: 000002.txt  000006.txt  000016.txt  000017.txt  000019.txt  000020.txt  000021.txt  000024.txt  000030.txt  000036.txt  000041.txt  000048.txt  000049.txt  000053.txt  000054.txt  000055.txt  000056.txt  000062.txt  000065.txt  000067.txt  000070.txt  000071.txt  000076.txt  000078.txt  000079.txt  000084.txt  000088.txt  000091.txt  000095.txt  000097.txt
data/labels/validation/: 000102.txt  000103.txt  000105.txt  000113.txt  000115.txt  000118.txt  000121.txt  000124.txt  classes.txt
ee405_final/data/labels/: training.cache
ee405_final/data/labels/training/: 000000.txt  000003.txt  000007.txt  000009.txt  000010.txt  000011.txt  000013.txt  000014.txt  000015.txt  000023.txt  000026.txt  000027.txt  000028.txt  000029.txt  000033.txt  000034.txt  000035.txt  000039.txt  000042.txt  000043.txt  000045.txt  000046.txt  000047.txt  000050.txt  000051.txt  000052.txt  000057.txt  000058.txt  000063.txt  000066.txt  000068.txt  000069.txt  000072.txt  000073.txt  000074.txt  000080.txt  000082.txt  000083.txt  000087.txt  000090.txt  (+5 more)
ee405_final/data/labels/validation/: 000101.txt  000104.txt  000106.txt  000108.txt  000109.txt  000111.txt  000112.txt  000114.txt  000117.txt  000120.txt  000122.txt  000123.txt  000125.txt  000126.txt  000127.txt  000128.txt  classes.txt
ee405_final/motor_integration/: CMakeLists.txt  README.md  getJacobian  test  toolchain.arm.cmake
ee405_final/motor_integration/include/Common/: Kinematics.hpp
ee405_final/motor_integration/include/Controller/: ArticulatedSystem.cpp  ArticulatedSystem.hpp
ee405_final/motor_integration/include/FileIO/: MatrixFileIO.hpp
ee405_final/motor_integration/include/GPIO/: gripper_control.hpp
ee405_final/motor_integration/src/: board.txt  cam.py  determine.cpp  pc  pc.cpp  testJacobian.cpp
(+2 files in other folders)
